<resources>
    <string name="app_name">Auction</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_image">product_image</string>
    <string name="auction_image">auction_image\n</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="number">Number</string>
    <string name="kyc">KYC</string>
    <string name="pan_no">PAN No</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="save">save\n</string>
    <string name="about">About</string>
    <string name="email_id">Email id</string>
    <string name="manage_account">Manage Account</string>
    <string name="user_name">User Name</string>
    <string name="my_bids">My Bids</string>
    <string name="auction">Auction</string>
    <string name="sell">Sell</string>
    <string name="logout">Logout</string>
    <string name="email">email</string>
    <string name="sign_up">sign_up</string>
    <string name="already_a_member">already_a_member</string>
    <string name="welcome">welcome</string>
    <string name="password">password</string>
    <string name="phone_no">Phone No</string>
    <string name="submit">Submit</string>
    <string name="remembered_password">Remembered_password</string>
    <string name="login">login</string>
    <string name="login_page">login page</string>
    <string name="search">Search</string>
    <string name="end_bid">end Bid</string>
    <string name="detailed_discryption">Detailed discryption</string>
    <string name="initial_price">initial price</string>
    <string name="heighest_bid">$Heighest bid</string>
    <string name="product_name">Product Name</string>
    <string name="my_auctions">My Auctions</string>
    <string name="highest_bid">Highest Bid:</string>
    <string name="your_highest_bid">Your Highest Bid:</string>
    <string name="details">Details</string>
    <string name="EmailId">Email Id:</string>
    <string name="wallet">Wallet</string>
    <string name="hello">Hello</string>
    <string name="bids">Bids</string>
    <string name="live">Live</string>
    <string name="scheduled">Scheduled</string>
    <string name="bid_now">Bid Now</string>
    <string name="type">Type</string>
    <string name="delete">Delete</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="result_for_search">Result For Search</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="select_category">Select Category</string>
    <string name="add_image">Add Image</string>
    <string name="end_time">End Time</string>
    <string name="full_address">Full address</string>
    <string name="_0">0</string>
    <string name="enter_amount">Enter amount</string>
    <string name="add_radianite_to_wallet">Add Radianite to Wallet</string>
    <string name="total_balance">Total balance</string>
    <string name="utilised_amount">Utilised amount</string>
    <string name="available_balance">Available balance</string>
    <string name="add_radianite">Add Radianite</string>
    <string name="local_currency_value">Local Currency Value</string>
    <string name="country">Country</string>
    <string name="textview">TextView</string>
</resources>