<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="24dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/rounded_top_dialog"
    android:elevation="10dp"
    android:orientation="vertical"
    tools:context=".AccountFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_table_background"
            >

            <TextView
                android:id="@+id/About"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Details"
                android:layout_alignParentStart="true"
                android:layout_marginStart="64dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:padding="10dp"
                android:text="@string/about"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/Wallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_card"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="62dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:text="@string/wallet"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/Details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_card"
                android:layout_alignParentStart="true"
                android:layout_marginStart="61dp"
                android:layout_marginTop="40dp"
                android:padding="10dp"
                android:text="@string/details"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/User__Name"
                android:layout_marginStart="25dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/profile_card"
                android:text="@string/EmailId"
                android:textColor="@color/black" />

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_card"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_below="@+id/textView19"
                android:layout_alignParentStart="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                app:cardCornerRadius="40dp">

                <ImageView
                    android:id="@+id/profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/account1"
                    android:clickable="true"
                    android:scaleType="centerCrop"
                    android:visibility="visible" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="42dp"
                android:layout_marginTop="40dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/hello"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/User__Name"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_below="@+id/textView19"
                android:layout_marginStart="25dp"
                android:layout_marginTop="40dp"
                android:layout_toEndOf="@+id/profile_card"
                android:text="@string/user_name"
                android:textColor="@color/black" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>